// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Incoming Queries to a Task displays completed task 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <Text
    style={
      Object {
        "textDecorationLine": "line-through",
      }
    }
  >
    Foo
  </Text>
</View>
`;

exports[`Incoming Queries to a Task displays the task 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <Text
    style={false}
  >
    Foo
  </Text>
</View>
`;
